fixed bold text not showing

--- a/Vinyl.css
+++ b/Vinyl.css
@@ -112,7 +112,7 @@ img {
     border: none;
 }
 strong, b {
-    font-weight: 400 !important;
+    font-weight: 700 !important;
 }
 .head .time {
     margin-left: 5px;
